# Offer

./: .gitignore  CMakeLists.txt
offer/: offer3.go
offer10/offer10_2/: offer10_2.cpp
offer10_1/: offer10_1.cpp
offer11/: offer11.cpp
offer12/: offer12.cpp
offer13/: offer13.cpp
offer14/offer14_1/: offer14_1.cpp
offer14/offer14_2/: offer14_2.cpp
offer14_1/: offer14_1.cpp
offer15/: offer15.cpp
offer16/: offer16.cpp
offer17/: offer17.cpp
offer18/: offer18.cpp
offer20/: offer20.cpp
offer21/: offer21.cpp
offer22/: offer22.cpp
offer24/: offer24.cpp
offer25/: offer25.cpp
offer26/: offer26.cpp
offer27/: offer27.cpp
offer28/: offer28.cpp
offer29/: offer29.cpp
offer30/: offer30.cpp
offer31/: offer31.cpp
offer32/: offer32.cpp
offer32/offer32_2/: offer32_2.cpp
offer32/offer32_3/: offer32_3.cpp
offer32_3/: offer32_3.cpp
offer33/: offer33.cpp
offer34/: offer34.cpp
offer35/: offer35.cpp
offer36/: offer36.cpp
offer37/: offer37.cpp
offer38/: offer38.cpp
offer39/: offer39.cpp
offer4/: offer4.go
offer40/: offer40.cpp
offer41/: offer41.cpp
offer42/: offer42.cpp
offer43/: offer43.cpp
offer44/: offer44.cpp
offer5/: offer5.go
offer52/: offer52.cpp
offer55/: offer55_1.cpp  offer55_2.cpp
offer56/: offer56_1.cpp  offer56_2.cpp
offer6/: offer6.go
offer7/: offer7.go
offer9/: offer9.cpp
