cmake_minimum_required(VERSION 3.21)
project(Offer)

set(CMAKE_CXX_STANDARD 14)

add_executable(offer16 offer16/offer16.cpp)
add_executable(offer17 offer17/offer17.cpp)
add_executable(offer18 offer18/offer18.cpp)
add_executable(offer20 offer20/offer20.cpp)
add_executable(offer21 offer21/offer21.cpp)
add_executable(offer22 offer22/offer22.cpp)