cmake_minimum_required(VERSION 3.21)
project(offer33)

set(CMAKE_CXX_STANDARD 14)

add_executable(offer9 offer9/offer9.cpp)
add_executable(offer10_1 offer10/offer10_1/offer10_1.cpp)
add_executable(offer10_2 offer10/offer10_2/offer10_2.cpp)
add_executable(offer11 offer11/offer11.cpp)
add_executable(offer12 offer12/offer12.cpp)
add_executable(offer13 offer13/offer13.cpp)
add_executable(offer14_1 offer14/offer14_1/offer14_1.cpp)
add_executable(offer14_2 offer14/offer14_2/offer14_2.cpp)
add_executable(offer15 offer15/offer15.cpp)
add_executable(offer16 offer16/offer16.cpp)
add_executable(offer17 offer17/offer17.cpp)
add_executable(offer18 offer18/offer18.cpp)
add_executable(offer20 offer20/offer20.cpp)
add_executable(offer21 offer21/offer21.cpp)
add_executable(offer22 offer22/offer22.cpp)
add_executable(offer24 offer24/offer24.cpp)
add_executable(offer25 offer25/offer25.cpp)
add_executable(offer26 offer26/offer26.cpp)
add_executable(offer27 offer27/offer27.cpp)
add_executable(offer28 offer28/offer28.cpp)
add_executable(offer29 offer29/offer29.cpp)
add_executable(offer30 offer30/offer30.cpp)
add_executable(offer31 offer31/offer31.cpp)
add_executable(offer32_2 offer32/offer32_2/offer32_2.cpp)
add_executable(offer32_3 offer32/offer32_3/offer32_3.cpp)
add_executable(offer33 offer33/offer33.cpp)
add_executable(offer34 offer34/offer34.cpp)









add_executable(offer35 offer35/offer35.cpp)
add_executable(offer36 offer36/offer36.cpp)
add_executable(offer37 offer37/offer37.cpp)